Fix navbar z-index

--- a/src/scss/modules/navs.scss
+++ b/src/scss/modules/navs.scss
@@ -1,5 +1,6 @@
 .navbar {
   position: fixed;
+  z-index: 1000;
   top: 0;
   display: flex;
   width: 100vw;
